data_processing.log
2025-04-14 18:18:12,001 [INFO] - ¿ªÊ¼Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³É...
2025-04-14 18:18:12,003 [INFO] - ²½Öè1£º²âÊÔÊı¾İ¿âÁ¬½Ó...
2025-04-14 18:18:12,235 [INFO] - Êı¾İ¿âÁ¬½Ó³É¹¦£¡
2025-04-14 18:18:12,235 [INFO] - ²½Öè2£º¼ì²éÅÉÉú±í...
2025-04-14 18:18:13,465 [INFO] - mimiciv_derived.bg±í´æÔÚ£¬°üº¬697687ĞĞÊı¾İ
2025-04-14 18:18:14,545 [INFO] - mimiciv_derived.sofa±í´æÔÚ£¬°üº¬8369694ĞĞÊı¾İ
2025-04-14 18:18:15,113 [INFO] - mimiciv_derived.sepsis3±í´æÔÚ£¬°üº¬7721514ĞĞÊı¾İ
2025-04-14 18:18:15,114 [INFO] - ²½Öè3£ºÖ´ĞĞÊı¾İÌáÈ¡Óë´¦Àí...
2025-04-14 18:18:15,117 [INFO] - ¿ªÊ¼Êı¾İÌáÈ¡Óë´¦Àí...
2025-04-14 18:18:15,119 [ERROR] - Êı¾İÌáÈ¡Óë´¦ÀíÊ§°Ü: No module named 'utils.data_extraction'
2025-04-14 18:18:15,125 [INFO] - ³¢ÊÔÊ¹ÓÃÊ¾ÀıÊı¾İ...
2025-04-14 18:18:15,125 [ERROR] - Ê¹ÓÃÊ¾ÀıÊı¾İÒ²Ê§°Ü: No module named 'utils.data_extraction'
2025-04-14 18:18:40,051 [INFO] - ¿ªÊ¼Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³É...
2025-04-14 18:18:40,052 [INFO] - ²½Öè1£º²âÊÔÊı¾İ¿âÁ¬½Ó...
2025-04-14 18:18:40,273 [INFO] - Êı¾İ¿âÁ¬½Ó³É¹¦£¡
2025-04-14 18:18:40,274 [INFO] - ²½Öè2£º¼ì²éÅÉÉú±í...
2025-04-14 18:18:40,670 [INFO] - mimiciv_derived.bg±í´æÔÚ£¬°üº¬697687ĞĞÊı¾İ
2025-04-14 18:18:41,033 [INFO] - mimiciv_derived.sofa±í´æÔÚ£¬°üº¬8369694ĞĞÊı¾İ
2025-04-14 18:18:41,373 [INFO] - mimiciv_derived.sepsis3±í´æÔÚ£¬°üº¬7721514ĞĞÊı¾İ
2025-04-14 18:18:41,373 [INFO] - ²½Öè3£ºÖ´ĞĞÊı¾İÌáÈ¡Óë´¦Àí...
2025-04-14 18:18:41,378 [INFO] - ¿ªÊ¼Êı¾İÌáÈ¡Óë´¦Àí...
2025-04-14 18:18:41,381 [ERROR] - Êı¾İÌáÈ¡Óë´¦ÀíÊ§°Ü: No module named 'utils.data_extraction'
2025-04-14 18:18:41,381 [INFO] - ³¢ÊÔÊ¹ÓÃÊ¾ÀıÊı¾İ...
2025-04-14 18:18:41,381 [ERROR] - Ê¹ÓÃÊ¾ÀıÊı¾İÒ²Ê§°Ü: No module named 'utils.data_extraction'
2025-04-14 18:20:19,927 [INFO] - ¿ªÊ¼Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³É...
2025-04-14 18:20:19,927 [INFO] - ²½Öè1£º²âÊÔÊı¾İ¿âÁ¬½Ó...
2025-04-14 18:20:20,091 [INFO] - Êı¾İ¿âÁ¬½Ó³É¹¦!
2025-04-14 18:20:20,091 [INFO] - ²½Öè2£º¼ì²éÅÉÉú±í...
2025-04-14 18:20:20,334 [INFO] - mimiciv_derived.bg±í´æÔÚ£¬°üº¬697687ĞĞÊı¾İ
2025-04-14 18:20:20,701 [INFO] - mimiciv_derived.sofa±í´æÔÚ£¬°üº¬8369694ĞĞÊı¾İ
2025-04-14 18:20:21,027 [INFO] - mimiciv_derived.sepsis3±í´æÔÚ£¬°üº¬7721514ĞĞÊı¾İ
2025-04-14 18:20:21,028 [INFO] - ²½Öè3£ºÌáÈ¡»¼Õß¶ÓÁĞ...
2025-04-14 18:20:21,181 [INFO] - ÌáÈ¡ÁË 0 Ãû»¼ÕßµÄĞÅÏ¢
2025-04-14 18:20:21,188 [INFO] - »¼ÕßĞÅÏ¢ÒÑ±£´æÖÁ data/processed/patient_info.csv
2025-04-14 18:20:21,188 [INFO] - ²½Öè4£ºÌáÈ¡Ñù±¾Êı¾İ...
2025-04-14 18:20:21,543 [ERROR] - Êı¾İ´¦ÀíÊ§°Ü: Execution failed on sql '
    SELECT subject_id, icustay_id AS stay_id, hr, sofa_score
    FROM mimiciv_derived.sofa
    WHERE subject_id IN %s AND icustay_id IN %s
    ORDER BY subject_id, icustay_id, hr
    ': ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^

2025-04-14 18:20:21,549 [ERROR] - Traceback (most recent call last):
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2674, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "D:\Documents\Downloads\ai\project\run_data_processing.py", line 190, in main
    merged_df = extract_sample_data(conn, patient_df, sample_size=50)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Documents\Downloads\ai\project\run_data_processing.py", line 95, in extract_sample_data
    sofa_df = pd.read_sql(sofa_query, conn, params=(subject_ids, stay_ids))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 706, in read_sql
    return pandas_sql.read_query(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2738, in read_query
    cursor = self.execute(sql, params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2686, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql '
    SELECT subject_id, icustay_id AS stay_id, hr, sofa_score
    FROM mimiciv_derived.sofa
    WHERE subject_id IN %s AND icustay_id IN %s
    ORDER BY subject_id, icustay_id, hr
    ': ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^


2025-04-14 18:20:21,551 [INFO] - Éú³ÉµÄÎÄ¼şÍ³¼ÆĞÅÏ¢:
2025-04-14 18:20:21,552 [INFO] - - data/processed/patient_info.csv: 0.03KB
2025-04-14 18:20:21,552 [WARNING] - - data/processed/patient_features.csv: ÎÄ¼ş²»´æÔÚ
2025-04-14 18:20:21,552 [WARNING] - - data/processed/sepsis_labels.csv: ÎÄ¼ş²»´æÔÚ
2025-04-14 18:20:21,553 [WARNING] - - data/processed/kg_embeddings.json: ÎÄ¼ş²»´æÔÚ
2025-04-14 18:20:21,553 [INFO] - Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³ÉÍê³É£¬ºÄÊ±: 1.63Ãë
2025-04-14 20:12:44,737 [INFO] - ¿ªÊ¼Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³É...
2025-04-14 20:12:44,737 [INFO] - ²½Öè1£º²âÊÔÊı¾İ¿âÁ¬½Ó...
2025-04-14 20:12:45,479 [INFO] - Êı¾İ¿âÁ¬½Ó³É¹¦!
2025-04-14 20:12:45,479 [INFO] - ²½Öè2£º¼ì²éÅÉÉú±í...
2025-04-14 20:12:45,722 [INFO] - mimiciv_derived.bg±í´æÔÚ£¬°üº¬697687ĞĞÊı¾İ
2025-04-14 20:12:46,168 [INFO] - mimiciv_derived.sofa±í´æÔÚ£¬°üº¬8369694ĞĞÊı¾İ
2025-04-14 20:12:46,504 [INFO] - mimiciv_derived.sepsis3±í´æÔÚ£¬°üº¬7721514ĞĞÊı¾İ
2025-04-14 20:12:46,504 [INFO] - ²½Öè3£ºÌáÈ¡»¼Õß¶ÓÁĞ...
2025-04-14 20:12:46,532 [INFO] - ÌáÈ¡ÁË 0 Ãû»¼ÕßµÄĞÅÏ¢
2025-04-14 20:12:46,541 [INFO] - »¼ÕßĞÅÏ¢ÒÑ±£´æÖÁ data/processed/patient_info.csv
2025-04-14 20:12:46,541 [INFO] - ²½Öè4£ºÌáÈ¡Ñù±¾Êı¾İ...
2025-04-14 20:12:46,906 [ERROR] - Êı¾İ´¦ÀíÊ§°Ü: Execution failed on sql '
    SELECT subject_id, icustay_id AS stay_id, hr, sofa_score
    FROM mimiciv_derived.sofa
    WHERE subject_id IN %s AND icustay_id IN %s
    ORDER BY subject_id, icustay_id, hr
    ': ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^

2025-04-14 20:12:46,909 [ERROR] - Traceback (most recent call last):
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2674, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "D:\Documents\Downloads\ai\project\run_data_processing.py", line 190, in main
    merged_df = extract_sample_data(conn, patient_df, sample_size=500)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Documents\Downloads\ai\project\run_data_processing.py", line 95, in extract_sample_data
    sofa_df = pd.read_sql(sofa_query, conn, params=(subject_ids, stay_ids))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 706, in read_sql
    return pandas_sql.read_query(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2738, in read_query
    cursor = self.execute(sql, params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Think\AppData\Roaming\Python\Python312\site-packages\pandas\io\sql.py", line 2686, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql '
    SELECT subject_id, icustay_id AS stay_id, hr, sofa_score
    FROM mimiciv_derived.sofa
    WHERE subject_id IN %s AND icustay_id IN %s
    ORDER BY subject_id, icustay_id, hr
    ': ´íÎó:  Óï·¨´íÎó ÔÚ ")" »ò¸½½üµÄ
LINE 4:     WHERE subject_id IN () AND icustay_id IN ()
                                 ^


2025-04-14 20:12:46,909 [INFO] - Éú³ÉµÄÎÄ¼şÍ³¼ÆĞÅÏ¢:
2025-04-14 20:12:46,909 [INFO] - - data/processed/patient_info.csv: 0.03KB
2025-04-14 20:12:46,910 [WARNING] - - data/processed/patient_features.csv: ÎÄ¼ş²»´æÔÚ
2025-04-14 20:12:46,910 [WARNING] - - data/processed/sepsis_labels.csv: ÎÄ¼ş²»´æÔÚ
2025-04-14 20:12:46,910 [WARNING] - - data/processed/kg_embeddings.json: ÎÄ¼ş²»´æÔÚ
2025-04-14 20:12:46,910 [INFO] - Êı¾İ´¦ÀíÓëÅ§¶¾Ö¢±êÇ©Éú³ÉÍê³É£¬ºÄÊ±: 2.17Ãë
2025-04-14 20:18:47,087 - __main__ - ERROR - å¯¼å…¥é”™è¯¯: No module named 'utils.database_config'
2025-04-14 20:18:47,087 - __main__ - ERROR - è¯·ç¡®ä¿æ‚¨åœ¨é¡¹ç›®æ ¹ç›®å½•æ‰§è¡Œæ­¤è„šæœ¬ï¼Œå¹¶ä¸”å·²å®‰è£…æ‰€æœ‰ä¾èµ–
2025-04-14 20:18:47,759 - __main__ - ERROR - å¯¼å…¥é”™è¯¯: No module named 'utils.database_config'
2025-04-14 20:18:47,760 - __main__ - ERROR - è¯·ç¡®ä¿æ‚¨åœ¨é¡¹ç›®æ ¹ç›®å½•æ‰§è¡Œæ­¤è„šæœ¬ï¼Œå¹¶ä¸”å·²å®‰è£…æ‰€æœ‰ä¾èµ–
2025-04-14 20:18:54,815 - __main__ - ERROR - å¯¼å…¥é”™è¯¯: No module named 'utils.database_config'
2025-04-14 20:18:54,815 - __main__ - ERROR - è¯·ç¡®ä¿æ‚¨åœ¨é¡¹ç›®æ ¹ç›®å½•æ‰§è¡Œæ­¤è„šæœ¬ï¼Œå¹¶ä¸”å·²å®‰è£…æ‰€æœ‰ä¾èµ–
2025-04-14 20:18:55,554 - __main__ - ERROR - å¯¼å…¥é”™è¯¯: No module named 'utils.database_config'
2025-04-14 20:18:55,554 - __main__ - ERROR - è¯·ç¡®ä¿æ‚¨åœ¨é¡¹ç›®æ ¹ç›®å½•æ‰§è¡Œæ­¤è„šæœ¬ï¼Œå¹¶ä¸”å·²å®‰è£…æ‰€æœ‰ä¾èµ–
